--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,10 @@ bevy = { version = "0.16", default-features = false, features = [
 ] }
 clap = { version = "4.5", features = ["derive"] }
 bevy_console_derive = { path = "./bevy_console_derive", version = "0.5.0" }
-bevy_egui = { version = "0.34", default-features = false, features = [
+bevy_egui = { version = "0.36", default-features = false, features = [
     "render",
     "default_fonts",
+    "bevy_ui"
 ] }
 shlex = "1.3"
 ansi-parser = "0.9"
